2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclNamesp.c:
	* tests/info.test:  [Bug 545325 ] info level didn't report
	namespace eval, bug report by Richard Suchenwirth.

2002-04-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/subst.n:  Clarified documentation on handling unusual return
	codes during substitution, and on variable substitutions implied
	by command substitution, and vice versa.  [Bug 536838]

2002-04-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdIL.c (InfoBodyCmd): 
	* tests/info.test (info-2.6): Proc bodies without string reps
	would report as empty [Bug #545644]

	* generic/tclCmdMZ.c (Tcl_SubstObj): More clarification for
	comment on behaviour when substitutions are not well-formed,
	prompted by [Bug #536831]; alas, removing the ill-defined
	behaviour is a lot of work.

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c:
	* tests/expr-old.test: fix for [Bug #542588] (Phil Ehrens), where
	"too large integers" were reported as "floating-point value" in
	[expr] error messages.

2002-04-17  Don Porter  <dgp@users.sourceforge.net>

	* doc/tcltest.n:  Removed [saveState] and [restoreState] from
	tcltest 2 documentation, effectively deprecating them.  [Bug 495660]
	* library/tcltest/tcltest.tcl: Made separate export for commands
	kept only for tcltest 1 compatibility.

	* tests/iogt.test: Revised to run tests in a namespace, rather than
	use the useless and buggy [saveState] and [restoreState] commands
	of tcltest.  Updated to use tcltest 2 as well.  [Patch 544911]

2002-04-16  Don Porter  <dgp@users.sourceforge.net>

	* tests/io.test: Revised to run tests in a namespace, rather than
	use the useless and buggy [saveState] and [restoreState] commands
	of tcltest.  Updated to use tcltest 2 as well.  [Patch 544546]

2002-04-15  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclProc.c:
	* tests/proc-old.test: Improved stack trace for TCL_BREAK and